# Nametag-Auto-Printing

./: .gitignore  Cargo.toml  README.md  build.rs  builder.sh
db_setup/: nametags.sql  printers.sql
frontend/index/: Cargo.toml
frontend/index/src/: main.rs
frontend/index/static/: index.html
migrations/2018-04-27-203911_setup/: down.sql  up.sql
sql/: setup.sql
src/: daemon.rs  lib.rs  main.rs  nametag.rs
src/db/: mod.rs  models.rs  schema.rs
static/: index.html
static/js/: main.js
