[package]
name = "nametag-auto-printing"
version = "0.1.0"
authors = ["zethra <jediben97@gmail.com>"]

[lib]
name = "nap"
path = "src/lib.rs"

[dependencies]
actix = "0.5"
actix-web = "0.5"
bytes = "0.4"
futures = "0.1"
env_logger = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "0.11"
diesel = { version = "1.2", features = ["sqlite"] }
