[package]
name = "nametag-auto-printing"
version = "0.1.0"
authors = ["zethra <jediben97@gmail.com>"]

build = "build.rs"
include = ["db_setup"]

[lib]
name = "nap"
path = "src/lib.rs"

[dependencies]
actix = "0.5"
actix-web = "0.5"
bytes = "0.4"
futures = "0.1"
env_logger = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "0.11"
diesel = { version = "1.2", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
lazy_static = "1.0"
phf = "0.7"
includedir = "0.4"
tempfile = "3.0"
diesel-derive-enum = { version = "0.4", features = ["sqlite"] }
reqwest = "0.8"
hyper = "0.12"

[build-dependencies]
includedir_codegen = "0.4"
